// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Table tests should render Table correctly 1`] = `
<DocumentFragment>
  .c12 {
  height: 1.5rem;
  width: 1.5rem;
  flex-shrink: 0;
}

.c13 {
  color: #000000;
  font-size: 1.5rem;
}

.c11 {
  border: none;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  border-radius: 50%;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: transparent;
  color: #000000;
  height: 2rem;
  width: 2rem;
}

.c11 .material-symbols-sharp,
.c11 .material-symbols-rounded {
  color: inherit;
}

.c11:hover:not(:disabled) {
  background-color: #EEEEEE;
}

.c11:active:not(:disabled) {
  background-color: #E2E2E2;
}

.c11:disabled {
  opacity: 0.5;
  cursor: initial;
}

.c10 {
  display: inline-flex;
}

.c5 {
  display: flex;
  font-size: 0.75rem;
  line-height: 0.875rem;
  font-weight: 400;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #757575;
  font-family: roboto;
  margin-bottom: 0.25rem;
}

.c3 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #757575;
  font-family: roboto;
}

.c8 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #000000;
  font-family: roboto;
  font-weight: 400;
}

.c0 {
  background-color: #F6F6F6;
  padding: 1.25rem;
  border-radius: 4px;
  position: relative;
}

.c1 {
  display: grid;
  grid-gap: 1.25rem;
  grid-template-columns: repeat(3, minmax(0, 1fr)) 2rem;
}

.c1:not(:last-child) {
  border-bottom: 1px solid #E2E2E2;
}

.c4 {
  display: grid;
  grid-gap: 1.25rem;
  grid-template-columns: repeat(3, minmax(0, 1fr)) 2rem;
}

.c4:not(:last-child) {
  border-bottom: 1px solid #E2E2E2;
}

.c2 {
  height: 2.875rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.c9 {
  height: 2.875rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.c7 {
  display: flex;
  align-items: center;
}

@media screen and (max-width: 767.98px) {
  .c1 {
    display: flex;
    flex-direction: column;
    display: none;
  }

  .c1:not(:last-child) {
    border-bottom: none;
  }
}

@media screen and (max-width: 767.98px) {
  .c4 {
    display: flex;
    flex-direction: column;
  }

  .c4:not(:last-child) {
    border-bottom: none;
  }
}

@media screen and (max-width: 767.98px) {
  .c2 {
    height: initial;
  }
}

@media screen and (max-width: 767.98px) {
  .c9 {
    height: initial;
    position: absolute;
    right: 0.75rem;
    top: 0.75rem;
  }
}

@media screen and (min-width: 768px) {
  .c6 {
    display: none;
  }
}

<div
    class="c0"
    data-testid="table"
  >
    <div
      class="c1"
      data-testid="header"
    >
      <div
        class="c2"
      >
        <p
          class="c3"
          font-family="roboto"
        >
          Key
        </p>
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
          font-family="roboto"
        >
          Environment
        </p>
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
          font-family="roboto"
        >
          Description
        </p>
      </div>
    </div>
    <div
      class="c4"
      data-testid="row"
    >
      <div
        class="c2"
      >
        <span
          class="c5 c6"
          font-family="roboto"
          mb="0.25rem"
        >
          KEY
        </span>
        <div
          class="c7"
        >
          <p
            class="c8"
            font-family="roboto"
            font-weight="400"
          >
            key_dev_8299aa6b
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <span
          class="c5 c6"
          font-family="roboto"
          mb="0.25rem"
        >
          ENVIRONMENT
        </span>
        <div
          class="c7"
        >
          <p
            class="c8"
            font-family="roboto"
            font-weight="400"
          >
            development
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <span
          class="c5 c6"
          font-family="roboto"
          mb="0.25rem"
        >
          DESCRIPTION
        </span>
        <div
          class="c7"
        >
          <p
            class="c8"
            font-family="roboto"
            font-weight="400"
          >
            development SDK
          </p>
        </div>
      </div>
      <div
        class="c9"
      >
        <div
          class="c10"
        >
          <button
            class="c11"
            variant="neutral"
          >
            <div
              class="c12"
              data-testid="icon-container"
            >
              <span
                class="c13 material-symbols-rounded"
                data-testid="icon"
              >
                more_horiz
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="c4"
      data-testid="row"
    >
      <div
        class="c2"
      >
        <span
          class="c5 c6"
          font-family="roboto"
          mb="0.25rem"
        >
          KEY
        </span>
        <div
          class="c7"
        >
          <p
            class="c8"
            font-family="roboto"
            font-weight="400"
          >
            key_dev_8299aa6b
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <span
          class="c5 c6"
          font-family="roboto"
          mb="0.25rem"
        >
          ENVIRONMENT
        </span>
        <div
          class="c7"
        >
          <p
            class="c8"
            font-family="roboto"
            font-weight="400"
          >
            development
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <span
          class="c5 c6"
          font-family="roboto"
          mb="0.25rem"
        >
          DESCRIPTION
        </span>
        <div
          class="c7"
        >
          <p
            class="c8"
            font-family="roboto"
            font-weight="400"
          >
            development SDK
          </p>
        </div>
      </div>
      <div
        class="c9"
      >
        <div
          class="c10"
        >
          <button
            class="c11"
            variant="neutral"
          >
            <div
              class="c12"
              data-testid="icon-container"
            >
              <span
                class="c13 material-symbols-rounded"
                data-testid="icon"
              >
                more_horiz
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Table tests should render Table with images 1`] = `
<DocumentFragment>
  .c8 {
  height: 2.25rem;
  width: 2.25rem;
  border-radius: 50%;
  overflow: hidden;
  flex-shrink: 0;
  margin-right: 0.75rem;
  border-radius: 50%;
}

.c9 {
  height: 100%;
  width: 100%;
  object-fit: cover;
}

.c14 {
  height: 1.5rem;
  width: 1.5rem;
  flex-shrink: 0;
}

.c15 {
  color: #000000;
  font-size: 1.5rem;
}

.c13 {
  border: none;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  border-radius: 50%;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: transparent;
  color: #000000;
  height: 2rem;
  width: 2rem;
}

.c13 .material-symbols-sharp,
.c13 .material-symbols-rounded {
  color: inherit;
}

.c13:hover:not(:disabled) {
  background-color: #EEEEEE;
}

.c13:active:not(:disabled) {
  background-color: #E2E2E2;
}

.c13:disabled {
  opacity: 0.5;
  cursor: initial;
}

.c12 {
  display: inline-flex;
}

.c5 {
  display: flex;
  font-size: 0.75rem;
  line-height: 0.875rem;
  font-weight: 400;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #757575;
  font-family: roboto;
  margin-bottom: 0.25rem;
}

.c3 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #757575;
  font-family: roboto;
}

.c10 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #000000;
  font-family: roboto;
  font-weight: 400;
}

.c0 {
  background-color: #F6F6F6;
  padding: 1.25rem;
  border-radius: 4px;
  position: relative;
}

.c1 {
  display: grid;
  grid-gap: 1.25rem;
  grid-template-columns: repeat(3, minmax(0, 1fr)) 2rem;
}

.c1:not(:last-child) {
  border-bottom: 1px solid #E2E2E2;
}

.c4 {
  display: grid;
  grid-gap: 1.25rem;
  grid-template-columns: repeat(3, minmax(0, 1fr)) 2rem;
}

.c4:not(:last-child) {
  border-bottom: 1px solid #E2E2E2;
}

.c2 {
  height: 2.875rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.c11 {
  height: 2.875rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.c7 {
  display: flex;
  align-items: center;
}

@media screen and (max-width: 767.98px) {
  .c1 {
    display: flex;
    flex-direction: column;
    display: none;
  }

  .c1:not(:last-child) {
    border-bottom: none;
  }
}

@media screen and (max-width: 767.98px) {
  .c4 {
    display: flex;
    flex-direction: column;
  }

  .c4:not(:last-child) {
    border-bottom: none;
  }
}

@media screen and (max-width: 767.98px) {
  .c2 {
    height: initial;
  }
}

@media screen and (max-width: 767.98px) {
  .c11 {
    height: initial;
    position: absolute;
    right: 0.75rem;
    top: 0.75rem;
  }
}

@media screen and (min-width: 768px) {
  .c6 {
    display: none;
  }
}

<div
    class="c0"
    data-testid="table"
  >
    <div
      class="c1"
      data-testid="header"
    >
      <div
        class="c2"
      >
        <p
          class="c3"
          font-family="roboto"
        >
          Name
        </p>
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
          font-family="roboto"
        >
          Email
        </p>
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
          font-family="roboto"
        >
          Role
        </p>
      </div>
    </div>
    <div
      class="c4"
      data-testid="row"
    >
      <div
        class="c2"
      >
        <span
          class="c5 c6"
          font-family="roboto"
          mb="0.25rem"
        >
          NAME
        </span>
        <div
          class="c7"
        >
          <div
            class="c8"
            data-testid="avatar"
            mr="0.75rem"
            size="36"
          >
            <img
              alt="Jack profile image"
              class="c9"
              src="https://api.dicebear.com/8.x/initials/svg?seed=Jack&size=36&fontSize=40"
            />
          </div>
          <p
            class="c10"
            font-family="roboto"
            font-weight="400"
          >
            Jack
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <span
          class="c5 c6"
          font-family="roboto"
          mb="0.25rem"
        >
          EMAIL
        </span>
        <div
          class="c7"
        >
          <p
            class="c10"
            font-family="roboto"
            font-weight="400"
          >
            jack@gmail.com
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <span
          class="c5 c6"
          font-family="roboto"
          mb="0.25rem"
        >
          ROLE
        </span>
        <div
          class="c7"
        >
          <p
            class="c10"
            font-family="roboto"
            font-weight="400"
          >
            Admin
          </p>
        </div>
      </div>
      <div
        class="c11"
      >
        <div
          class="c12"
        >
          <button
            class="c13"
            variant="neutral"
          >
            <div
              class="c14"
              data-testid="icon-container"
            >
              <span
                class="c15 material-symbols-rounded"
                data-testid="icon"
              >
                more_horiz
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="c4"
      data-testid="row"
    >
      <div
        class="c2"
      >
        <span
          class="c5 c6"
          font-family="roboto"
          mb="0.25rem"
        >
          NAME
        </span>
        <div
          class="c7"
        >
          <div
            class="c8"
            data-testid="avatar"
            mr="0.75rem"
            size="36"
          >
            <img
              alt="Pedro profile image"
              class="c9"
              src="https://api.dicebear.com/8.x/initials/svg?seed=Pedro&size=36&fontSize=40"
            />
          </div>
          <p
            class="c10"
            font-family="roboto"
            font-weight="400"
          >
            Pedro
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <span
          class="c5 c6"
          font-family="roboto"
          mb="0.25rem"
        >
          EMAIL
        </span>
        <div
          class="c7"
        >
          <p
            class="c10"
            font-family="roboto"
            font-weight="400"
          >
            pedro_dev@gmail.com
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <span
          class="c5 c6"
          font-family="roboto"
          mb="0.25rem"
        >
          ROLE
        </span>
        <div
          class="c7"
        >
          <p
            class="c10"
            font-family="roboto"
            font-weight="400"
          >
            developer
          </p>
        </div>
      </div>
      <div
        class="c11"
      >
        <div
          class="c12"
        >
          <button
            class="c13"
            variant="neutral"
          >
            <div
              class="c14"
              data-testid="icon-container"
            >
              <span
                class="c15 material-symbols-rounded"
                data-testid="icon"
              >
                more_horiz
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="c4"
      data-testid="row"
    >
      <div
        class="c2"
      >
        <span
          class="c5 c6"
          font-family="roboto"
          mb="0.25rem"
        >
          NAME
        </span>
        <div
          class="c7"
        >
          <div
            class="c8"
            data-testid="avatar"
            mr="0.75rem"
            size="36"
          >
            <img
              alt="Daniel profile image"
              class="c9"
              src="https://api.dicebear.com/8.x/initials/svg?seed=Daniel&size=36&fontSize=40"
            />
          </div>
          <p
            class="c10"
            font-family="roboto"
            font-weight="400"
          >
            Daniel
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <span
          class="c5 c6"
          font-family="roboto"
          mb="0.25rem"
        >
          EMAIL
        </span>
        <div
          class="c7"
        >
          <p
            class="c10"
            font-family="roboto"
            font-weight="400"
          >
            daniel_ninja_dev@gmail.com
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <span
          class="c5 c6"
          font-family="roboto"
          mb="0.25rem"
        >
          ROLE
        </span>
        <div
          class="c7"
        >
          <p
            class="c10"
            font-family="roboto"
            font-weight="400"
          >
            developer
          </p>
        </div>
      </div>
      <div
        class="c11"
      >
        <div
          class="c12"
        >
          <button
            class="c13"
            variant="neutral"
          >
            <div
              class="c14"
              data-testid="icon-container"
            >
              <span
                class="c15 material-symbols-rounded"
                data-testid="icon"
              >
                more_horiz
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="c4"
      data-testid="row"
    >
      <div
        class="c2"
      >
        <span
          class="c5 c6"
          font-family="roboto"
          mb="0.25rem"
        >
          NAME
        </span>
        <div
          class="c7"
        >
          <div
            class="c8"
            data-testid="avatar"
            mr="0.75rem"
            size="36"
          >
            <img
              alt="Joana profile image"
              class="c9"
              src="https://api.dicebear.com/8.x/initials/svg?seed=Joana&size=36&fontSize=40"
            />
          </div>
          <p
            class="c10"
            font-family="roboto"
            font-weight="400"
          >
            Joana
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <span
          class="c5 c6"
          font-family="roboto"
          mb="0.25rem"
        >
          EMAIL
        </span>
        <div
          class="c7"
        >
          <p
            class="c10"
            font-family="roboto"
            font-weight="400"
          >
            joana_mac@gmail.com
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <span
          class="c5 c6"
          font-family="roboto"
          mb="0.25rem"
        >
          ROLE
        </span>
        <div
          class="c7"
        >
          <p
            class="c10"
            font-family="roboto"
            font-weight="400"
          >
            QA
          </p>
        </div>
      </div>
      <div
        class="c11"
      >
        <div
          class="c12"
        >
          <button
            class="c13"
            variant="neutral"
          >
            <div
              class="c14"
              data-testid="icon-container"
            >
              <span
                class="c15 material-symbols-rounded"
                data-testid="icon"
              >
                more_horiz
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Table tests should render Table with space utils 1`] = `
<DocumentFragment>
  .c12 {
  height: 1.5rem;
  width: 1.5rem;
  flex-shrink: 0;
}

.c13 {
  color: #000000;
  font-size: 1.5rem;
}

.c11 {
  border: none;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  border-radius: 50%;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: transparent;
  color: #000000;
  height: 2rem;
  width: 2rem;
}

.c11 .material-symbols-sharp,
.c11 .material-symbols-rounded {
  color: inherit;
}

.c11:hover:not(:disabled) {
  background-color: #EEEEEE;
}

.c11:active:not(:disabled) {
  background-color: #E2E2E2;
}

.c11:disabled {
  opacity: 0.5;
  cursor: initial;
}

.c10 {
  display: inline-flex;
}

.c5 {
  display: flex;
  font-size: 0.75rem;
  line-height: 0.875rem;
  font-weight: 400;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #757575;
  font-family: roboto;
  margin-bottom: 0.25rem;
}

.c3 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #757575;
  font-family: roboto;
}

.c8 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #000000;
  font-family: roboto;
  font-weight: 400;
}

.c0 {
  margin-top: 30px;
  background-color: #F6F6F6;
  padding: 1.25rem;
  border-radius: 4px;
  position: relative;
}

.c1 {
  display: grid;
  grid-gap: 1.25rem;
  grid-template-columns: repeat(3, minmax(0, 1fr)) 2rem;
}

.c1:not(:last-child) {
  border-bottom: 1px solid #E2E2E2;
}

.c4 {
  display: grid;
  grid-gap: 1.25rem;
  grid-template-columns: repeat(3, minmax(0, 1fr)) 2rem;
}

.c4:not(:last-child) {
  border-bottom: 1px solid #E2E2E2;
}

.c2 {
  height: 2.875rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.c9 {
  height: 2.875rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.c7 {
  display: flex;
  align-items: center;
}

@media screen and (max-width: 767.98px) {
  .c1 {
    display: flex;
    flex-direction: column;
    display: none;
  }

  .c1:not(:last-child) {
    border-bottom: none;
  }
}

@media screen and (max-width: 767.98px) {
  .c4 {
    display: flex;
    flex-direction: column;
  }

  .c4:not(:last-child) {
    border-bottom: none;
  }
}

@media screen and (max-width: 767.98px) {
  .c2 {
    height: initial;
  }
}

@media screen and (max-width: 767.98px) {
  .c9 {
    height: initial;
    position: absolute;
    right: 0.75rem;
    top: 0.75rem;
  }
}

@media screen and (min-width: 768px) {
  .c6 {
    display: none;
  }
}

<div
    class="c0"
    data-testid="table"
  >
    <div
      class="c1"
      data-testid="header"
    >
      <div
        class="c2"
      >
        <p
          class="c3"
          font-family="roboto"
        >
          Key
        </p>
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
          font-family="roboto"
        >
          Environment
        </p>
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
          font-family="roboto"
        >
          Description
        </p>
      </div>
    </div>
    <div
      class="c4"
      data-testid="row"
    >
      <div
        class="c2"
      >
        <span
          class="c5 c6"
          font-family="roboto"
          mb="0.25rem"
        >
          KEY
        </span>
        <div
          class="c7"
        >
          <p
            class="c8"
            font-family="roboto"
            font-weight="400"
          >
            key_dev_8299aa6b
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <span
          class="c5 c6"
          font-family="roboto"
          mb="0.25rem"
        >
          ENVIRONMENT
        </span>
        <div
          class="c7"
        >
          <p
            class="c8"
            font-family="roboto"
            font-weight="400"
          >
            development
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <span
          class="c5 c6"
          font-family="roboto"
          mb="0.25rem"
        >
          DESCRIPTION
        </span>
        <div
          class="c7"
        >
          <p
            class="c8"
            font-family="roboto"
            font-weight="400"
          >
            development SDK
          </p>
        </div>
      </div>
      <div
        class="c9"
      >
        <div
          class="c10"
        >
          <button
            class="c11"
            variant="neutral"
          >
            <div
              class="c12"
              data-testid="icon-container"
            >
              <span
                class="c13 material-symbols-rounded"
                data-testid="icon"
              >
                more_horiz
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="c4"
      data-testid="row"
    >
      <div
        class="c2"
      >
        <span
          class="c5 c6"
          font-family="roboto"
          mb="0.25rem"
        >
          KEY
        </span>
        <div
          class="c7"
        >
          <p
            class="c8"
            font-family="roboto"
            font-weight="400"
          >
            key_dev_8299aa6b
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <span
          class="c5 c6"
          font-family="roboto"
          mb="0.25rem"
        >
          ENVIRONMENT
        </span>
        <div
          class="c7"
        >
          <p
            class="c8"
            font-family="roboto"
            font-weight="400"
          >
            development
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <span
          class="c5 c6"
          font-family="roboto"
          mb="0.25rem"
        >
          DESCRIPTION
        </span>
        <div
          class="c7"
        >
          <p
            class="c8"
            font-family="roboto"
            font-weight="400"
          >
            development SDK
          </p>
        </div>
      </div>
      <div
        class="c9"
      >
        <div
          class="c10"
        >
          <button
            class="c11"
            variant="neutral"
          >
            <div
              class="c12"
              data-testid="icon-container"
            >
              <span
                class="c13 material-symbols-rounded"
                data-testid="icon"
              >
                more_horiz
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
